# otus_lan8

./: CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
inc/: bayan.h  options.h
src/: bayan.cpp  main.cpp  options.cpp
tests/: test.cpp
